--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
-- complete timer implementation
+- potentiel use after free if both timeout and user handle happened at the same time
 - add headers in thre response
 - make it send error response when an error occurs
 - clean up code
+- maybe do some optimization for the heap allocation 
